实现了AVL树，修改了一些文件命名

--- a/try.ipynb
+++ b/try.ipynb
@@ -802,6 +802,190 @@
     "        if self.hasRightChild():\n",
     "            self.rightChild.parent = self"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 构建AVL\n",
+    "# 基于BinarySearchTree\n",
+    "\n",
+    "# 定义TreeNode类\n",
+    "class TreeNode():\n",
+    "    def __init__(self, key, val, left=None, right=None, parent=None):\n",
+    "        self.key = key  # 键\n",
+    "        self.value = val  # 节点的值\n",
+    "        self.leftChild = left  # 左子树\n",
+    "        self.rightChild = right  # 右子树\n",
+    "        self.parent = parent\n",
+    "\n",
+    "    def hasLeftChild(self):\n",
+    "        # 判断是否有左子树\n",
+    "        return self.leftChild\n",
+    "    \n",
+    "    def hasRightChild(self):\n",
+    "        # 判断是否有右子树\n",
+    "        return self.rightChild\n",
+    "    \n",
+    "    def isLeftChild(self):\n",
+    "        # 判断是否为左子树,如果父节点不为空,且当前节点为父节点的左子树,则返回True\n",
+    "        return self.parent and self.parent.leftChild == self\n",
+    "\n",
+    "    def isRightChild(self):\n",
+    "        # 判断是否为右子树,如果父节点不为空,且当前节点为父节点的右子树,则返回True\n",
+    "        return self.parent and self.parent.rightChild == self\n",
+    "    \n",
+    "    def isRoot(self):\n",
+    "        # 判断是否为根节点\n",
+    "        return not self.parent\n",
+    "    \n",
+    "    def isLeaf(self):\n",
+    "        # 判断是否为叶节点\n",
+    "        return not (self.rightChild or self.leftChild)\n",
+    "    \n",
+    "    def hasAnyChildren(self):\n",
+    "        # 判断是否有子节点\n",
+    "        return self.rightChild or self.leftChild\n",
+    "    \n",
+    "    def hasBothChildren(self):\n",
+    "        # 判断是否有两个子节点\n",
+    "        return self.rightChild and self.leftChild\n",
+    "    \n",
+    "    def replaceNodeData(self, key, value, lc, rc):\n",
+    "        # 替换节点数据\n",
+    "        self.key = key\n",
+    "        self.value = value\n",
+    "        self.leftChild = lc\n",
+    "        self.rightChild = rc\n",
+    "        if self.hasLeftChild():\n",
+    "            self.leftChild.parent = self\n",
+    "        if self.hasRightChild():\n",
+    "            self.rightChild.parent = self\n",
+    "\n",
+    "\n",
+    "# 构建AVL\n",
+    "class AVLTree(BinarySearchTree):\n",
+    "    # 继承BinarySearchTree类\n",
+    "    \n",
+    "    def _put(self, key, val, currentNode):\n",
+    "        # 插入键值对\n",
+    "        if key < currentNode.key:\n",
+    "            if currentNode.hasLeftChild():\n",
+    "                self._put(key, val, currentNode.leftChild)\n",
+    "            else:\n",
+    "                currentNode.leftChild = TreeNode(key, val, parent=currentNode)\n",
+    "                self.updateBalance(currentNode.leftChild)\n",
+    "        else:\n",
+    "            if currentNode.hasRightChild():\n",
+    "                self._put(key, val, currentNode.rightChild)\n",
+    "            else:\n",
+    "                currentNode.rightChild = TreeNode(key, val, parent=currentNode)\n",
+    "                self.updateBalance(currentNode.rightChild)\n",
+    "    \n",
+    "    def updateBalance(self, currentNode):\n",
+    "        # 更新平衡\n",
+    "        if currentNode.balanceFactor > 1 or currentNode.balanceFactor < -1:\n",
+    "            # 这里应该假设balanceFactor的初始值为0，因为上一次插入的时候已经更新了平衡因子\n",
+    "            # 只要有一个节点的平衡因子大于1或小于-1,则需要全部重新平衡，所以放在最前面\n",
+    "            self.rebalance(currentNode)\n",
+    "            return\n",
+    "        if currentNode.parent != None:\n",
+    "            if currentNode.isLeftChild():\n",
+    "                currentNode.parent.balanceFactor += 1\n",
+    "            elif currentNode.isRightChild():\n",
+    "                currentNode.parent.balanceFactor -= 1\n",
+    "            if currentNode.parent.balanceFactor != 0:\n",
+    "                self.updateBalance(currentNode.parent)\n",
+    "    \n",
+    "    def rotateLeft(self, rotRoot):\n",
+    "        # 左旋\n",
+    "        newRoot = rotRoot.rightChild\n",
+    "        rotRoot.rightChild = newRoot.leftChild\n",
+    "        if newRoot.leftChild != None:\n",
+    "            newRoot.leftChild.parent = rotRoot\n",
+    "        newRoot.parent = rotRoot.parent\n",
+    "        if rotRoot.isRoot():\n",
+    "            self.root = newRoot\n",
+    "        else:\n",
+    "            if rotRoot.isLeftChild():\n",
+    "                rotRoot.parent.leftChild = newRoot\n",
+    "            else:\n",
+    "                rotRoot.parent.rightChild = newRoot\n",
+    "        newRoot.leftChild = rotRoot\n",
+    "        rotRoot.parent = newRoot\n",
+    "        rotRoot.balanceFactor = rotRoot.balanceFactor + 1 - min(newRoot.balanceFactor, 0)\n",
+    "        newRoot.balanceFactor = newRoot.balanceFactor + 1 + max(rotRoot.balanceFactor, 0)\n",
+    "        \n",
+    "    def rotateRight(self, rotRoot):\n",
+    "        # 右旋\n",
+    "        newRoot = rotRoot.leftChild\n",
+    "        rotRoot.leftChild = newRoot.rightChild\n",
+    "        if newRoot.rightChild != None:\n",
+    "            newRoot.rightChild.parent = rotRoot\n",
+    "        newRoot.parent = rotRoot.parent\n",
+    "        if rotRoot.isRoot():\n",
+    "            self.root = newRoot\n",
+    "        else:\n",
+    "            if rotRoot.isRightChild():\n",
+    "                rotRoot.parent.rightChild = newRoot\n",
+    "            else:\n",
+    "                rotRoot.parent.leftChild = newRoot\n",
+    "        newRoot.rightChild = rotRoot\n",
+    "        rotRoot.parent = newRoot\n",
+    "        rotRoot.balanceFactor = rotRoot.balanceFactor - 1 - max(newRoot.balanceFactor, 0)\n",
+    "        newRoot.balanceFactor = newRoot.balanceFactor - 1 + min(rotRoot.balanceFactor, 0)\n",
+    "    \n",
+    "    def rebalance(self, currentNode):\n",
+    "        # 重新平衡\n",
+    "        if currentNode.balanceFactor < 0:\n",
+    "            if currentNode.rightChild.balanceFactor > 0:\n",
+    "                self.rotateRight(currentNode.rightChild)\n",
+    "                self.rotateLeft(currentNode)\n",
+    "            else:\n",
+    "                self.rotateLeft(currentNode)\n",
+    "        elif currentNode.balanceFactor > 0:\n",
+    "            if currentNode.leftChild.balanceFactor < 0:\n",
+    "                self.rotateLeft(currentNode.leftChild)\n",
+    "                self.rotateRight(currentNode)\n",
+    "            else:\n",
+    "                self.rotateRight(currentNode)\n",
+    "    \n",
+    "    def remove(self, currentNode):\n",
+    "        # 删除节点\n",
+    "        if currentNode.isLeaf():\n",
+    "            if currentNode == currentNode.parent.leftChild:\n",
+    "                currentNode.parent.leftChild = None\n",
+    "            else:\n",
+    "                currentNode.parent.rightChild = None\n",
+    "        elif currentNode.hasBothChildren():\n",
+    "            succ = currentNode.findSuccessor()\n",
+    "            succ.spliceOut()\n",
+    "            currentNode.key = succ.key\n",
+    "            currentNode.value = succ.value\n",
+    "        else:\n",
+    "            if currentNode.hasLeftChild():\n",
+    "                if currentNode.isLeftChild():\n",
+    "                    currentNode.leftChild.parent = currentNode.parent\n",
+    "                    currentNode.parent.leftChild = currentNode.leftChild\n",
+    "                elif currentNode.isRightChild():\n",
+    "                    currentNode.leftChild.parent = currentNode.parent\n",
+    "                    currentNode.parent.rightChild = currentNode.leftChild\n",
+    "                else:\n",
+    "                    currentNode.replaceNodeData(currentNode.leftChild.key, currentNode.leftChild.value, currentNode.leftChild.leftChild, currentNode.leftChild.rightChild)\n",
+    "            else:\n",
+    "                if currentNode.isLeftChild():\n",
+    "                    currentNode.rightChild.parent = currentNode.parent\n",
+    "                    currentNode.parent.leftChild = currentNode.rightChild\n",
+    "                elif currentNode.isRightChild():\n",
+    "                    currentNode.rightChild.parent = currentNode.parent\n",
+    "                    currentNode.parent.rightChild = currentNode.rightChild\n",
+    "                else:\n",
+    "                    currentNode.replaceNodeData(currentNode.rightChild.key, currentNode.rightChild.value, currentNode.rightChild.leftChild, currentNode.rightChild.rightChild)\n",
+    "        self.updateBalance(currentNode)\n",
+    "        "
+   ]
   }
  ],
  "metadata": {
