实现广度优先搜索

--- a/testGragh.ipynb
+++ b/testGragh.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,6 +16,11 @@
     "        self.id = key\n",
     "        # 顶点的连接,以字典的形式存储，key是顶点对象，value是权重\n",
     "        self.connectedTo = {}\n",
+    "        \n",
+    "        # 针对广度优先搜索的辅助变量\n",
+    "        self.color = 'white'  # 顶点的颜色，白色表示未访问，灰色表示访问过但未探索，黑色表示访问过且探索过\n",
+    "        self.dist = 0  # 顶点的距离\n",
+    "        self.pred = None  # 顶点的前驱\n",
     "    \n",
     "    def addNeighbor(self, nbr, weight=0):\n",
     "        # 添加邻接顶点\n",
@@ -36,6 +41,27 @@
     "    def getWeight(self, nbr):\n",
     "        # 返回顶点的权重\n",
     "        return self.connectedTo[nbr]\n",
+    "    \n",
+    "    # 针对广度优先搜索的辅助函数\n",
+    "    # 针对广度优先搜索的辅助函数\n",
+    "    # 针对广度优先搜索的辅助函数\n",
+    "    def setColor(self, color):\n",
+    "        self.color = color\n",
+    "        \n",
+    "    def getColor(self):\n",
+    "        return self.color\n",
+    "    \n",
+    "    def setDistance(self, d):\n",
+    "        self.dist = d\n",
+    "        \n",
+    "    def getDistance(self):\n",
+    "        return self.dist\n",
+    "    \n",
+    "    def setPred(self, p):\n",
+    "        self.pred = p\n",
+    "        \n",
+    "    def getPred(self):\n",
+    "        return self.pred\n",
     "\n",
     "\n",
     "# 实现Graph类\n",
@@ -86,14 +112,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: <__main__.Vertex object at 0x0000019E2E8A9160>, 1: <__main__.Vertex object at 0x0000019E2E8A9040>, 2: <__main__.Vertex object at 0x0000019E2E8A9430>, 3: <__main__.Vertex object at 0x0000019E2E8A9370>, 4: <__main__.Vertex object at 0x0000019E2E8A9340>, 5: <__main__.Vertex object at 0x0000019E2E8A9460>}\n"
+      "{0: <__main__.Vertex object at 0x0000020E03BACC70>, 1: <__main__.Vertex object at 0x0000020E03882E50>, 2: <__main__.Vertex object at 0x0000020E03C924C0>, 3: <__main__.Vertex object at 0x0000020E03F73AC0>, 4: <__main__.Vertex object at 0x0000020E03C34130>, 5: <__main__.Vertex object at 0x0000020E03EB6F40>}\n"
      ]
     }
    ],
@@ -107,10 +133,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 队列\n",
+    "class Queve:\n",
+    "    def __init__(self):\n",
+    "        self.items = []\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.items == []\n",
+    "\n",
+    "    def enqueue(self, item):  # 入队\n",
+    "        self.items.insert(0, item)\n",
+    "\n",
+    "    def dequeue(self):  # 出队\n",
+    "        return self.items.pop()\n",
+    "\n",
+    "    def size(self):\n",
+    "        return len(self.items)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 这里解决一个词梯问题\n",
+    "# 构建一个图，每个单词是一个顶点，如果两个单词只有一个字母不同，则两个单词之间有一条边\n",
+    "def buildGraph(wordList):\n",
+    "    d = {}  # 创建一个字典，key是单词，value是单词对应的顶点\n",
+    "    g = Graph()  # 创建一个图\n",
+    "    # 遍历单词列表,创建词桶\n",
+    "    for word in wordList:\n",
+    "        g.addVertex(word)\n",
+    "        for i in range(len(word)):\n",
+    "            bucket = word[:i] + '_' + word[i+1:]\n",
+    "            bucket = d.get(bucket, [])\n",
+    "            bucket.append(word)\n",
+    "            d[bucket] = bucket\n",
+    "    # 遍历词桶，为词桶中的单词添加边\n",
+    "    for bucket in d.values():\n",
+    "        for word1 in bucket:\n",
+    "            for word2 in bucket:\n",
+    "                if word1 != word2:\n",
+    "                    g.addEdge(word1, word2)\n",
+    "    return g "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 实现广度优先搜索\n",
+    "def bfs(gragh, start):\n",
+    "    start.setDistance(0)  # 起始点的距离为0\n",
+    "    start.setPred(None)  # 起始点的前驱为None\n",
+    "    vertQueue = Queve()  # 创建一个队列\n",
+    "    vertQueue.enqueue(start)  # 起始点入队\n",
+    "    while vertQueue.size() > 0:\n",
+    "        currentVert = vertQueue.dequeue()  # 出队\n",
+    "        for nbr in currentVert.getConnections():\n",
+    "            # 遍历当前顶点的所有邻接顶点\n",
+    "            nbr.setColor('gray')  # 邻接顶点变为灰色,表示已经访问过\n",
+    "            nbr.setDistance(currentVert.getDistance() + 1)  # 邻接顶点的距离为当前顶点的距离加1\n",
+    "            nbr.setPred(currentVert)  # 邻接顶点的前驱为当前顶点\n",
+    "            vertQueue.enqueue(nbr)  # 邻接顶点入队\n",
+    "        currentVert.setColor('black')  # 当前顶点变为黑色，表示已经探索过\n",
+    "\n",
+    "# 回溯，找到从起始点到终点的路径\n",
+    "def traverse(y):\n",
+    "    x = y\n",
+    "    while x.getPred():\n",
+    "        print(x.getId())\n",
+    "        x = x.getPred()\n",
+    "    print(x.getId())\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 优化广义优先搜索算法，不必遍历所有的顶点，只需要遍历到终点即可\n",
+    "# 返回路径\n",
+    "def bfsAdjust(gragh, start, end):\n",
+    "    # start是起始点，end是终点\n",
+    "    start.setDistance(0)  # 起始点的距离为0\n",
+    "    start.setPred(None)  # 起始点的前驱为None\n",
+    "    vertQueue = Queve()  # 创建一个队列\n",
+    "    # 起始点入队\n",
+    "    vertQueue.enqueue(start)\n",
+    "    while vertQueue.size() > 0:\n",
+    "        currentVert = vertQueue.dequeue()  # 出队\n",
+    "        if currentVert == end:\n",
+    "            # 如果当前顶点是终点，返回路径\n",
+    "            traverse(currentVert)\n",
+    "            return\n",
+    "        for nbr in currentVert.getConnections():\n",
+    "            # 遍历当前顶点的所有邻接顶点\n",
+    "            if nbr.getColor() == 'white':\n",
+    "                # 如果邻接顶点未访问过\n",
+    "                nbr.setColor('gray')  # 邻接顶点变为灰色,表示已经访问过\n",
+    "                nbr.setDistance(currentVert.getDistance() + 1)\n",
+    "                nbr.setPred(currentVert)\n",
+    "                vertQueue.enqueue(nbr)\n",
+    "        currentVert.setColor('black')\n",
+    "    return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 解决8数码问题\n",
+    "def bfs8(start, end):\n",
+    "    # start是起始状态，end是终止状态\n",
+    "    # start和end是一个长度为9的元组，表示一个状态\n",
+    "    gragh = Graph()\n",
+    "    current = Vertex(start)\n",
+    "    gragh.addVertex(current)\n",
+    "    vertQueue = Queve()\n",
+    "    vertQueue.enqueue(current)\n",
+    "    while vertQueue.size() > 0:\n",
+    "        current = vertQueue.dequeue()\n",
+    "        if current.getId() == end:\n",
+    "            return current.getDistance()\n",
+    "        for i in range(9):\n",
+    "            if current.getId()[i] == 0:\n",
+    "                break\n",
+    "        list_current = list(current.getId())  # 将当前状态转换为列表\n",
+    "        if i - 3 >= 0:\n",
+    "            # 上移\n",
+    "            self"
+   ]
   }
  ],
  "metadata": {
