实现深度优先搜索，改正一些小错误

--- a/testGragh.ipynb
+++ b/testGragh.ipynb
@@ -21,6 +21,10 @@
     "        self.color = 'white'  # 顶点的颜色，白色表示未访问，灰色表示访问过但未探索，黑色表示访问过且探索过\n",
     "        self.dist = 0  # 顶点的距离\n",
     "        self.pred = None  # 顶点的前驱\n",
+    "        \n",
+    "        # 针对深度优先搜索的辅助变量\n",
+    "        self.disc = 0\n",
+    "        self.fin = 0\n",
     "    \n",
     "    def addNeighbor(self, nbr, weight=0):\n",
     "        # 添加邻接顶点\n",
@@ -62,6 +66,21 @@
     "        \n",
     "    def getPred(self):\n",
     "        return self.pred\n",
+    "    \n",
+    "    # 针对深度优先搜索的辅助函数\n",
+    "    # 针对深度优先搜索的辅助函数\n",
+    "    # 针对深度优先搜索的辅助函数\n",
+    "    def setDiscovery(self, dtime):\n",
+    "        self.disc = dtime\n",
+    "        \n",
+    "    def getDiscovery(self):\n",
+    "        return self.disc\n",
+    "    \n",
+    "    def setFinish(self, ftime):\n",
+    "        self.fin = ftime\n",
+    "        \n",
+    "    def getFinish(self):\n",
+    "        return self.fin\n",
     "\n",
     "\n",
     "# 实现Graph类\n",
@@ -250,30 +269,88 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 栈\n",
+    "# 此时认为列表的尾部为栈的顶部\n",
+    "class Stack:\n",
+    "    def __init__(self):\n",
+    "        self.items = []\n",
+    "\n",
+    "    def isEmpty(self):\n",
+    "        return self.items == []\n",
+    "\n",
+    "    def push(self, item):\n",
+    "        self.items.append(item)\n",
+    "\n",
+    "    def pop(self):\n",
+    "        return self.items.pop()\n",
+    "\n",
+    "    def peek(self):\n",
+    "        return self.items[len(self.items)-1]\n",
+    "\n",
+    "    def size(self):\n",
+    "        return len(self.items)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 解决8数码问题\n",
-    "def bfs8(start, end):\n",
-    "    # start是起始状态，end是终止状态\n",
-    "    # start和end是一个长度为9的元组，表示一个状态\n",
-    "    gragh = Graph()\n",
-    "    current = Vertex(start)\n",
-    "    gragh.addVertex(current)\n",
-    "    vertQueue = Queve()\n",
-    "    vertQueue.enqueue(current)\n",
-    "    while vertQueue.size() > 0:\n",
-    "        current = vertQueue.dequeue()\n",
-    "        if current.getId() == end:\n",
-    "            return current.getDistance()\n",
-    "        for i in range(9):\n",
-    "            if current.getId()[i] == 0:\n",
-    "                break\n",
-    "        list_current = list(current.getId())  # 将当前状态转换为列表\n",
-    "        if i - 3 >= 0:\n",
-    "            # 上移\n",
-    "            self"
+    "# 实现深度有限搜索\n",
+    "class DFSGraph(Graph):\n",
+    "    def __init__(self):\n",
+    "        super().__init__()\n",
+    "        self.time = 0\n",
+    "    \n",
+    "    def dfs(self):\n",
+    "        # 深度优先搜索\n",
+    "        for aVertex in self:\n",
+    "            # 初始化所有顶点\n",
+    "            aVertex.setColor('white')\n",
+    "            aVertex.setPred(-1)\n",
+    "        for aVertex in self:\n",
+    "            if aVertex.getColor() == 'white':\n",
+    "                # 如果顶点未访问过\n",
+    "                self.dfsvisit(aVertex)\n",
+    "        \n",
+    "    def dfsvisit(self, startVertex):\n",
+    "        # 深度优先搜索的辅助函数\n",
+    "        startVertex.setColor('gray')  # 顶点变为灰色，表示已经访问过\n",
+    "        self.time += 1  # 时间加1\n",
+    "        startVertex.setDiscovery(self.time)  # 设置发现时间\n",
+    "        for nextVertex in startVertex.getConnections():\n",
+    "            # 遍历所有邻接顶点\n",
+    "            if nextVertex.getColor() == 'white':\n",
+    "                # 如果邻接顶点未访问过\n",
+    "                nextVertex.setPred(startVertex)  # 设置邻接顶点的前驱\n",
+    "                self.dfsvisit(nextVertex)  # 递归调用\n",
+    "        startVertex.setColor('black')  # 顶点变为黑色，表示已经探索过\n",
+    "        self.time += 1  # 时间加1\n",
+    "        startVertex.setFinish(self.time)  # 设置完成时间\n",
+    "    \n",
+    "    def dfsAdjust(self, start, end):\n",
+    "        # 深度优先搜索，找到从起始点到终点的路径\n",
+    "        start.setColor('white')\n",
+    "        start.setPred(None)\n",
+    "        stack = Stack()\n",
+    "        stack.push(start)\n",
+    "        while not stack.isEmpty():\n",
+    "            currentVertex = stack.pop()\n",
+    "            if currentVertex == end:\n",
+    "                traverse(currentVertex)\n",
+    "                return\n",
+    "            for nbr in currentVertex.getConnections():\n",
+    "                if nbr.getColor() == 'white':\n",
+    "                    nbr.setColor('gray')\n",
+    "                    nbr.setPred(currentVertex)\n",
+    "                    stack.push(nbr)\n",
+    "            currentVertex.setColor('black')\n",
+    "        return None\n"
    ]
   }
  ],
