BFS解决8数码问题

--- a/testGragh.ipynb
+++ b/testGragh.ipynb
@@ -2,162 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 实现图算法\n",
-    "# 使用两个类，Graph类存储包含所有带点的主列表，Vertex类存储每个顶点的信息\n",
-    "\n",
-    "# 实现Vertex类\n",
-    "class Vertex():\n",
-    "    def __init__(self, key):\n",
-    "        # 顶点的id\n",
-    "        self.id = key\n",
-    "        # 顶点的连接,以字典的形式存储，key是顶点对象，value是权重\n",
-    "        self.connectedTo = {}\n",
-    "        \n",
-    "        # 针对广度优先搜索的辅助变量\n",
-    "        self.color = 'white'  # 顶点的颜色，白色表示未访问，灰色表示访问过但未探索，黑色表示访问过且探索过\n",
-    "        self.dist = 0  # 顶点的距离\n",
-    "        self.pred = None  # 顶点的前驱\n",
-    "        \n",
-    "        # 针对深度优先搜索的辅助变量\n",
-    "        self.disc = 0\n",
-    "        self.fin = 0\n",
-    "    \n",
-    "    def addNeighbor(self, nbr, weight=0):\n",
-    "        # 添加邻接顶点\n",
-    "        self.connectedTo[nbr] = weight\n",
-    "        \n",
-    "    def __str__(self):\n",
-    "        # 返回顶点的连接信息\n",
-    "        return str(self.id) + ' connectedTo: ' + str([x.id for x in self.connectedTo])\n",
-    "    \n",
-    "    def getConnections(self):\n",
-    "        # 返回所有连接的顶点\n",
-    "        return self.connectedTo.keys()\n",
-    "    \n",
-    "    def getId(self):\n",
-    "        # 返回顶点的id\n",
-    "        return self.id\n",
-    "    \n",
-    "    def getWeight(self, nbr):\n",
-    "        # 返回顶点的权重\n",
-    "        return self.connectedTo[nbr]\n",
-    "    \n",
-    "    # 针对广度优先搜索的辅助函数\n",
-    "    # 针对广度优先搜索的辅助函数\n",
-    "    # 针对广度优先搜索的辅助函数\n",
-    "    def setColor(self, color):\n",
-    "        self.color = color\n",
-    "        \n",
-    "    def getColor(self):\n",
-    "        return self.color\n",
-    "    \n",
-    "    def setDistance(self, d):\n",
-    "        self.dist = d\n",
-    "        \n",
-    "    def getDistance(self):\n",
-    "        return self.dist\n",
-    "    \n",
-    "    def setPred(self, p):\n",
-    "        self.pred = p\n",
-    "        \n",
-    "    def getPred(self):\n",
-    "        return self.pred\n",
-    "    \n",
-    "    # 针对深度优先搜索的辅助函数\n",
-    "    # 针对深度优先搜索的辅助函数\n",
-    "    # 针对深度优先搜索的辅助函数\n",
-    "    def setDiscovery(self, dtime):\n",
-    "        self.disc = dtime\n",
-    "        \n",
-    "    def getDiscovery(self):\n",
-    "        return self.disc\n",
-    "    \n",
-    "    def setFinish(self, ftime):\n",
-    "        self.fin = ftime\n",
-    "        \n",
-    "    def getFinish(self):\n",
-    "        return self.fin\n",
-    "\n",
-    "\n",
-    "# 实现Graph类\n",
-    "class Graph():\n",
-    "    def __init__(self):\n",
-    "        # 图的顶点列表\n",
-    "        self.vertList = {}\n",
-    "        # 顶点的个数\n",
-    "        self.numVertices = 0\n",
-    "    \n",
-    "    def addVertex(self, key):\n",
-    "        # 添加顶点\n",
-    "        self.numVertices += 1\n",
-    "        newVertex = Vertex(key)\n",
-    "        self.vertList[key] = newVertex\n",
-    "        return newVertex\n",
-    "    \n",
-    "    def getVertex(self, n):\n",
-    "        # 返回顶点\n",
-    "        if n in self.vertList:\n",
-    "            return self.vertList[n]\n",
-    "        else:\n",
-    "            return None\n",
-    "        \n",
-    "    def __contains__(self, n):\n",
-    "        # 判断顶点是否在图中\n",
-    "        return n in self.vertList\n",
-    "    \n",
-    "    def addEdge(self, f, t, cost=0):\n",
-    "        # 添加边\n",
-    "        # f是起点，t是终点，cost是权重\n",
-    "        if f not in self.vertList:\n",
-    "            nv = self.addVertex(f)\n",
-    "        if t not in self.vertList:\n",
-    "            nv = self.addVertex(t)\n",
-    "        self.vertList[f].addNeighbor(self.vertList[t], cost)\n",
-    "        \n",
-    "    def getVertices(self):\n",
-    "        # 返回所有顶点\n",
-    "        return self.vertList.keys()\n",
-    "    \n",
-    "    def __iter__(self):\n",
-    "        # 迭代器\n",
-    "        # 返回所有顶点\n",
-    "        # 形式为每一个顶点相连的所以顶点\n",
-    "        return iter(self.vertList.values())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{0: <__main__.Vertex object at 0x0000020E03BACC70>, 1: <__main__.Vertex object at 0x0000020E03882E50>, 2: <__main__.Vertex object at 0x0000020E03C924C0>, 3: <__main__.Vertex object at 0x0000020E03F73AC0>, 4: <__main__.Vertex object at 0x0000020E03C34130>, 5: <__main__.Vertex object at 0x0000020E03EB6F40>}\n"
+      "5\n"
      ]
     }
    ],
    "source": [
-    "# 测试图算法\n",
-    "g = Graph()\n",
-    "for i in range(6):\n",
-    "    g.addVertex(i)\n",
-    "print(g.vertList)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "# 队列\n",
-    "class Queve:\n",
+    "class Queue:\n",
     "    def __init__(self):\n",
     "        self.items = []\n",
     "\n",
@@ -171,108 +29,109 @@
     "        return self.items.pop()\n",
     "\n",
     "    def size(self):\n",
-    "        return len(self.items)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 这里解决一个词梯问题\n",
-    "# 构建一个图，每个单词是一个顶点，如果两个单词只有一个字母不同，则两个单词之间有一条边\n",
-    "def buildGraph(wordList):\n",
-    "    d = {}  # 创建一个字典，key是单词，value是单词对应的顶点\n",
-    "    g = Graph()  # 创建一个图\n",
-    "    # 遍历单词列表,创建词桶\n",
-    "    for word in wordList:\n",
-    "        g.addVertex(word)\n",
-    "        for i in range(len(word)):\n",
-    "            bucket = word[:i] + '_' + word[i+1:]\n",
-    "            bucket = d.get(bucket, [])\n",
-    "            bucket.append(word)\n",
-    "            d[bucket] = bucket\n",
-    "    # 遍历词桶，为词桶中的单词添加边\n",
-    "    for bucket in d.values():\n",
-    "        for word1 in bucket:\n",
-    "            for word2 in bucket:\n",
-    "                if word1 != word2:\n",
-    "                    g.addEdge(word1, word2)\n",
-    "    return g "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 实现广度优先搜索\n",
-    "def bfs(gragh, start):\n",
-    "    start.setDistance(0)  # 起始点的距离为0\n",
-    "    start.setPred(None)  # 起始点的前驱为None\n",
-    "    vertQueue = Queve()  # 创建一个队列\n",
-    "    vertQueue.enqueue(start)  # 起始点入队\n",
-    "    while vertQueue.size() > 0:\n",
-    "        currentVert = vertQueue.dequeue()  # 出队\n",
-    "        for nbr in currentVert.getConnections():\n",
-    "            # 遍历当前顶点的所有邻接顶点\n",
-    "            nbr.setColor('gray')  # 邻接顶点变为灰色,表示已经访问过\n",
-    "            nbr.setDistance(currentVert.getDistance() + 1)  # 邻接顶点的距离为当前顶点的距离加1\n",
-    "            nbr.setPred(currentVert)  # 邻接顶点的前驱为当前顶点\n",
-    "            vertQueue.enqueue(nbr)  # 邻接顶点入队\n",
-    "        currentVert.setColor('black')  # 当前顶点变为黑色，表示已经探索过\n",
+    "        return len(self.items)\n",
     "\n",
-    "# 回溯，找到从起始点到终点的路径\n",
-    "def traverse(y):\n",
-    "    x = y\n",
-    "    while x.getPred():\n",
-    "        print(x.getId())\n",
-    "        x = x.getPred()\n",
-    "    print(x.getId())\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 优化广义优先搜索算法，不必遍历所有的顶点，只需要遍历到终点即可\n",
-    "# 返回路径\n",
-    "def bfsAdjust(gragh, start, end):\n",
-    "    # start是起始点，end是终点\n",
-    "    start.setDistance(0)  # 起始点的距离为0\n",
-    "    start.setPred(None)  # 起始点的前驱为None\n",
-    "    vertQueue = Queve()  # 创建一个队列\n",
-    "    # 起始点入队\n",
-    "    vertQueue.enqueue(start)\n",
+    "\n",
+    "# 解决8数码问题\n",
+    "class State():\n",
+    "    def __init__(self, list):\n",
+    "        # list为当前数码分布，列表表示\n",
+    "        self.value = list\n",
+    "        self.dist = 0  # 到达当前状态的步数\n",
+    "        self.color = 'white'  # white表示未访问，gray表示已访问,black表示已探索\n",
+    "        self.pred = None  # 前驱节点,用于记录路径\n",
+    "    \n",
+    "    def getValue(self):\n",
+    "        return self.value\n",
+    "    \n",
+    "    def setValue(self, list):\n",
+    "        self.value = list\n",
+    "        \n",
+    "    def getDist(self):\n",
+    "        return self.dist\n",
+    "    \n",
+    "    def setDist(self, dist):\n",
+    "        self.dist = dist\n",
+    "        \n",
+    "    def getColor(self):\n",
+    "        return self.color\n",
+    "    \n",
+    "    def setColor(self, color):\n",
+    "        self.color = color\n",
+    "        \n",
+    "    def getPred(self):\n",
+    "        return self.pred\n",
+    "    \n",
+    "    def setPred(self, pred):\n",
+    "        self.pred = pred\n",
+    "        \n",
+    "\n",
+    "# 寻找所有的邻居节点，上下左右移动\n",
+    "def findNeighbors(state):\n",
+    "    # state为当前状态，State类\n",
+    "    current_state = state.getValue()  # 当前状态\n",
+    "    zero_index = current_state.index(0)   # 找到0的位置\n",
+    "    list_location = [(0, 1), (0, -1), (1, 0), (-1, 0)]  # 上下左右移动\n",
+    "    for location in list_location:\n",
+    "        new_index = zero_index + location[0] * 3 + location[1]\n",
+    "        if new_index < 0 or new_index > 8:\n",
+    "            continue\n",
+    "        new_state = current_state.copy()\n",
+    "        new_state[zero_index] = new_state[new_index]\n",
+    "        new_state[new_index] = 0\n",
+    "        new_state = State(new_state)\n",
+    "        yield new_state\n",
+    "\n",
+    "# bfs寻找最短路径\n",
+    "def bfsCode8(start, end):\n",
+    "    # start为初始状态，end为目标状态,均为元组\n",
+    "    current_state = State(list(start))  # 将当前状态设置为初始状态\n",
+    "    end_state = State(list(end))  # 目标状态\n",
+    "    vertQueue = Queue()  # bfs使用队列，先进先出\n",
+    "    vertQueue.enqueue(current_state)  # 入队\n",
+    "    dist_min = 10000  # 记录为到达目标状态的最小步数\n",
+    "    set_visited = set()  # 记录访问过的顶点\n",
+    "    \n",
     "    while vertQueue.size() > 0:\n",
-    "        currentVert = vertQueue.dequeue()  # 出队\n",
-    "        if currentVert == end:\n",
-    "            # 如果当前顶点是终点，返回路径\n",
-    "            traverse(currentVert)\n",
-    "            return\n",
-    "        for nbr in currentVert.getConnections():\n",
-    "            # 遍历当前顶点的所有邻接顶点\n",
-    "            if nbr.getColor() == 'white':\n",
-    "                # 如果邻接顶点未访问过\n",
-    "                nbr.setColor('gray')  # 邻接顶点变为灰色,表示已经访问过\n",
-    "                nbr.setDistance(currentVert.getDistance() + 1)\n",
-    "                nbr.setPred(currentVert)\n",
-    "                vertQueue.enqueue(nbr)\n",
-    "        currentVert.setColor('black')\n",
-    "    return None"
+    "        current_state = vertQueue.dequeue()  # 出队\n",
+    "        for state in findNeighbors(current_state):\n",
+    "            # 跳过已经访问的顶点\n",
+    "            if str(state.getValue()) in set_visited:\n",
+    "                continue\n",
+    "            \n",
+    "            # 更新顶点\n",
+    "            state.setColor('Grey')  # 设定颜色为灰色，表示已访问\n",
+    "            state.setDist(current_state.getDist() + 1)  # 步数加1\n",
+    "            state.setPred(current_state)\n",
+    "            \n",
+    "            # 入队\n",
+    "            vertQueue.enqueue(state)\n",
+    "            \n",
+    "            # 更新集合\n",
+    "            set_visited.add(str(state.getValue()))\n",
+    "            \n",
+    "            # 判断是否到达目标状态\n",
+    "            if state.getValue() == end_state.getValue():\n",
+    "                dist_min = min(dist_min, state.getDist())  # 更新最小步数\n",
+    "        current_state.setColor('Black')  # 设定颜色为黑色，表示已探索\n",
+    "    return dist_min\n",
+    "\n",
+    "\n",
+    "# 测试            \n",
+    "if __name__ == '__main__':\n",
+    "    start = (2, 8, 3, 1, 6, 4, 7, 0, 5)\n",
+    "    end = (1, 2, 3, 8, 0, 4, 7, 6, 5)\n",
+    "    print(bfsCode8(start, end))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# DFS解决八皇后问题\n",
+    "\n",
     "# 栈\n",
     "# 此时认为列表的尾部为栈的顶部\n",
     "class Stack:\n",
@@ -292,65 +151,14 @@
     "        return self.items[len(self.items)-1]\n",
     "\n",
     "    def size(self):\n",
-    "        return len(self.items)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 实现深度有限搜索\n",
-    "class DFSGraph(Graph):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.time = 0\n",
-    "    \n",
-    "    def dfs(self):\n",
-    "        # 深度优先搜索\n",
-    "        for aVertex in self:\n",
-    "            # 初始化所有顶点\n",
-    "            aVertex.setColor('white')\n",
-    "            aVertex.setPred(-1)\n",
-    "        for aVertex in self:\n",
-    "            if aVertex.getColor() == 'white':\n",
-    "                # 如果顶点未访问过\n",
-    "                self.dfsvisit(aVertex)\n",
-    "        \n",
-    "    def dfsvisit(self, startVertex):\n",
-    "        # 深度优先搜索的辅助函数\n",
-    "        startVertex.setColor('gray')  # 顶点变为灰色，表示已经访问过\n",
-    "        self.time += 1  # 时间加1\n",
-    "        startVertex.setDiscovery(self.time)  # 设置发现时间\n",
-    "        for nextVertex in startVertex.getConnections():\n",
-    "            # 遍历所有邻接顶点\n",
-    "            if nextVertex.getColor() == 'white':\n",
-    "                # 如果邻接顶点未访问过\n",
-    "                nextVertex.setPred(startVertex)  # 设置邻接顶点的前驱\n",
-    "                self.dfsvisit(nextVertex)  # 递归调用\n",
-    "        startVertex.setColor('black')  # 顶点变为黑色，表示已经探索过\n",
-    "        self.time += 1  # 时间加1\n",
-    "        startVertex.setFinish(self.time)  # 设置完成时间\n",
-    "    \n",
-    "    def dfsAdjust(self, start, end):\n",
-    "        # 深度优先搜索，找到从起始点到终点的路径\n",
-    "        start.setColor('white')\n",
-    "        start.setPred(None)\n",
-    "        stack = Stack()\n",
-    "        stack.push(start)\n",
-    "        while not stack.isEmpty():\n",
-    "            currentVertex = stack.pop()\n",
-    "            if currentVertex == end:\n",
-    "                traverse(currentVertex)\n",
-    "                return\n",
-    "            for nbr in currentVertex.getConnections():\n",
-    "                if nbr.getColor() == 'white':\n",
-    "                    nbr.setColor('gray')\n",
-    "                    nbr.setPred(currentVertex)\n",
-    "                    stack.push(nbr)\n",
-    "            currentVertex.setColor('black')\n",
-    "        return None\n"
+    "        return len(self.items)\n",
+    "\n",
+    "\n",
+    "class State():\n",
+    "    def __init__(self, list):\n",
+    "        # list为当前数码分布，列表表示\n",
+    "        self.value = list\n",
+    "        self.pred = None  # 前驱节点,"
    ]
   }
  ],
