使用DFS解决八皇后问题，迭代起坑我！

--- a/testGragh.ipynb
+++ b/testGragh.ipynb
@@ -126,9 +126,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "92\n"
+     ]
+    }
+   ],
    "source": [
     "# DFS解决八皇后问题\n",
     "\n",
@@ -158,7 +166,82 @@
     "    def __init__(self, list):\n",
     "        # list为当前数码分布，列表表示\n",
     "        self.value = list\n",
-    "        self.pred = None  # 前驱节点,"
+    "        self.pred = None  # 前驱节点,用于记录路径\n",
+    "    \n",
+    "    def getValue(self):\n",
+    "        return self.value\n",
+    "    \n",
+    "    def setValue(self, list):\n",
+    "        self.value = list\n",
+    "        \n",
+    "    def getPred(self):\n",
+    "        return self.pred\n",
+    "    \n",
+    "    def setPred(self, pred):\n",
+    "        self.pred = pred\n",
+    "\n",
+    "\n",
+    "def dfsQueen():\n",
+    "    # 利用DFS解决八皇后问题\n",
+    "    stack = Stack()  # 使用栈\n",
+    "    nums_solve = 0  # 记录解的个数\n",
+    "    for index in range(8):\n",
+    "        stack.push(State([index, 0]))  # 将第一个皇后放入栈中\n",
+    "        while stack.size() > 0:\n",
+    "            current_state = stack.pop() # 出栈\n",
+    "\n",
+    "            if current_state.getValue()[1] == 7:  # 判断是否到达最后一行\n",
+    "                nums_solve += 1\n",
+    "                continue\n",
+    "            \n",
+    "            neighbors = list(findNeighbors(current_state))  # 寻找邻居节点\n",
+    "            if len(neighbors) == 0:\n",
+    "                continue\n",
+    "            for neighbor in neighbors:\n",
+    "                stack.push(neighbor)\n",
+    "    return nums_solve\n",
+    "\n",
+    "\n",
+    "# 判断是否冲突\n",
+    "def isConflict(state, new_state):\n",
+    "    # 判断是否冲突\n",
+    "    # state为当前状态，new_state为新状态\n",
+    "    current_index = state.getValue()  # 当前状态\n",
+    "    new_index = new_state.getValue()  # 新状态\n",
+    "    x1, y1 = current_index\n",
+    "    x2, y2 = new_index\n",
+    "    if x1 == x2 or y1 == y2 or abs(x1-x2) == abs(y1-y2):\n",
+    "        return True\n",
+    "    return False\n",
+    "\n",
+    "# 检查所有节点是否冲突\n",
+    "def checkConflict(state, new_state):\n",
+    "    # state为当前状态，State类\n",
+    "    if isConflict(state, new_state):\n",
+    "        return True\n",
+    "    pred = state.getPred()  # 前驱节点\n",
+    "    while pred:\n",
+    "        if isConflict(pred, new_state):\n",
+    "            return True\n",
+    "        pred = pred.getPred()\n",
+    "    return False\n",
+    "\n",
+    "# 寻找所有的邻居节点\n",
+    "def findNeighbors(state):\n",
+    "    # state为当前状态，State类\n",
+    "    current_index = state.getValue()  # 当前状态\n",
+    "    y = current_index[1]  # 当前行数\n",
+    "    for x in range(8):\n",
+    "        new_state = State([x, y+1])  # 新状态\n",
+    "        new_state.setPred(state)\n",
+    "        if checkConflict(state, new_state):\n",
+    "            continue\n",
+    "        yield new_state\n",
+    "\n",
+    "\n",
+    "# 测试\n",
+    "if __name__ == '__main__':\n",
+    "    print(dfsQueen())"
    ]
   }
  ],
